SUBDIRS = po $(COMPAT_SUBDIRS) src $(DOC_SUBDIRS)

EXTRA_DIST = \
             config.rpath \
             autogen.sh \
             README.win32 \
             win/rsvndump.cbp \
             lib/Makefile.am \
             lib/gettext.h \
             lib/lstat.c \
             lib/lstat.h \
             lib/malloc.c \
             lib/memcmp.c \
             lib/memset.c \
             lib/rmdir.c \
             lib/strdup.c \
             doc/Makefile.in \
             doc/Makefile.am \
             doc/rsvndump.txt

ACLOCAL_AMFLAGS = -I m4
