SUBDIRS = po lib src $(DOC_SUBDIRS)

EXTRA_DIST = \
             README.win32 \
             autogen.sh \
             config.rpath \
             doc/Makefile.am \
             doc/Makefile.in \
             doc/rsvndump.txt \
             doc/rsvndump.txt \
             lib/Makefile.am \
             lib/gettext.h \
             lib/lstat.c \
             lib/lstat.h \
             lib/malloc.c \
             lib/memcmp.c \
             lib/memset.c \
             lib/rmdir.c \
             lib/strdup.c \
             win/rsvndump.cbp

ACLOCAL_AMFLAGS = -I m4
